Fixed loader alignment issue on GJ NA.

--- a/themes/o2e_obe_subtheme/scss/react-datepicker.scss
+++ b/themes/o2e_obe_subtheme/scss/react-datepicker.scss
@@ -100,8 +100,6 @@ div[data-drupal-selector="edit-react-datepicker-component"] {
       z-index: 1;
       position: absolute;
       cursor: not-allowed;
-      left: 0;
-      top: 0;
       background: rgba($white, 0.7);
     }
   }
